extracted_vulnerabilities/pair_197111_252437/vuln_report.txt
extracted_vulnerabilities/pair_197111_252437/tinyexr_vuln.h:21:7: error: Code 'std::stringstream' is invalid C code. Use --std or --language to configure the language. [syntaxError]
      std::stringstream ss;
      ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

